--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Example",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha test/test.js --reporter mochawesome"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "mochawesome": "^1.5.4"
+  }
 }
