--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Example",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha test/test.js --reporter mochawesome"
+    "test": "node_modules/.bin/mocha test/test.js --reporter mochawesome --reporter mocha-junit-reporter"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
+    "mocha-junit-reporter": "^1.12.1",
     "mochawesome": "^1.5.4"
   }
 }
