--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Example",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha test/test.js --reporter mochawesome --reporter mocha-junit-reporter"
+    "test": "node_modules/.bin/mocha test/test.js --reporter mocha-multi --reporter-options dot=-,xunit=file.xml,doc=docs.html"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
     "mocha-junit-reporter": "^1.12.1",
+    "mocha-multi": "^0.9.1",
     "mochawesome": "^1.5.4"
   }
 }
